--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,12 +2,23 @@
   <h1><u>DashBoard</u></h1>
     <h2><p>Hello <%= current_user.username %></p></h2>
     <h3><p><b>You are a <%= current_user.role %> at <%= current_user.company.name%></b></p></h3>
-    <h2><%=link_to "For more details" , "/admin"%></h2>
-    <h2><%= link_to "Sign out", destroy_user_session_path,data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></h2>
-<% else %>
+    <% if current_user.Manager? %>
+       <h1><u>Manager DashBoard</u></h1>
+       <h2><p>Hello <%= current_user.username %></p></h2>
+       <%= link_to "Create Roster", new_rosters_path %>
+       <%= link_to "View Rosters", rosters_path %>
+       <h2><%= link_to "Sign out", destroy_user_session_path,data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></h2>
+    <% else %>
+    <h2>
+     <p>Please sign out and sign in as a  manager to access the Manager Dashboard.</p>
+     <h2><%= link_to "Sign out", destroy_user_session_path,data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></h2>
+     <h2><%=link_to "For more details" , "/admin"%></h2>
+   <% end %>
+  <% else %>
   <h2>
-   <p>Home Page.</p>
-   <strong><%= link_to "User login" , new_user_session_path %><br/>
+   <p>Login Page</p>
+   <%= link_to "User login" , new_user_session_path %><br/>
+   <%= link_to "manager login" , new_user_session_path %><br/>
    <b>If you are a new user, login to admin and create user</b><br/>
    <%= link_to "Admin Login", "/admin" %></strong>
   </h2>
