--- a/app/views/rosters/edit.html.erb
+++ b/app/views/rosters/edit.html.erb
@@ -1,18 +1,7 @@
-<h1>Edit Roster</h1>
-<%= render 'shared/errors', obj: @roster %>
+<h1>Editing roster</h1>
+<%= render "shared/errors", obj: @roster %>
+<%= render "form", roster: @roster %>
 
-<%= form_with(model: @roster, local: true) do |f| %>
-  <p>
-    <%= f.label :Roster_Date %><br/>
-    <%= f.date_field :roster_date %>
-  </p>
-  <p>
-    <%= f.label :Company%><br/>
-    <%= f.collection_select :company_id, Company.all, :id, :name %></p>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-
+<h3>
+  <%= link_to "Back to rosters", rosters_path %>
+</h3>
