--- a/app/views/rosters/new.html.erb
+++ b/app/views/rosters/new.html.erb
@@ -1,13 +1,7 @@
-<%= form_with(model: @employee, local: true) do |f| %>
- <p>  
-   <%= f.label :Select_Date %><br/>
-   <%= f.date_field :roster_date %>
- </p>
- <p>
-   <%= f.label :company_id %><br/>
-   <%= f.collection_select :company_id, Company.all, :id, :name %>
- </p>
- <p>
- <%= f.submit %>
- </p>
-<% end %>
+<h1>New roster</h1>
+<%= render "shared/errors", obj: @roster %>
+<%= render "form", roster: @roster %>
+
+<h3>
+  <%= link_to "Back to rosters", rosters_path %>
+</h3>
