--- a/app/views/rosters/index.html.erb
+++ b/app/views/rosters/index.html.erb
@@ -20,5 +20,6 @@
   </tbody>
 </table>
 <h3>
+ <%=link_to "New Roster" , new_roster_path%> |
  <%= link_to "Back to Manager DashBoard", root_path %><br/>
 </h3>
