--- a/app/views/shifts/_form.html.erb
+++ b/app/views/shifts/_form.html.erb
@@ -1,21 +1,21 @@
-<%= form_with(model: shift) do |f| %>
+<%= form_with(model: shift) do |f| %><h3>
     <p>
       <%= f.hidden_field :roster_id, value: params[:roster_id]%>
     </p>
     <p>
       <%= f.label :Start_time%>
-      <%= f.time_field :start_time %>
+      <%=f.time_select :start_time, as: :time_select, ampm: true, minute_step: 15 %>
     </p>
     
     <p>
       <%= f.label :End_time%>
-      <%= f.time_field :end_time %>
+      <%=f.time_select :end_time, as: :time_select, ampm: true, minute_step: 15 %>
     </p>
   
     <p>
       <%= f.label :employee_id%>
       <%= f.collection_select :employee_id, Employee.all, :id, :name %>
-    </p>
+    </p></h3>
   
     <p>
       <%= f.submit %>
