--- a/app/views/shifts/_shift.html.erb
+++ b/app/views/shifts/_shift.html.erb
@@ -2,12 +2,12 @@
   <h3>
     <p>
      <strong>Start time:</strong>
-     <%= shift.start_time %>
+     <%= shift.start_time.strftime("%I:%M %p") %>
     </p>
   
     <p>
      <strong>End TIme:</strong>
-     <%= shift.end_time %>
+     <%= shift.end_time.strftime("%I:%M %p") %>
     </p>
 
     <p>
@@ -17,7 +17,7 @@
    
     <p>
      <strong>Employee_Role:</strong>
-     <%= shift.employee.role %>
-    </p>
+     <%= shift.employee.role.present? ? shift.employee.role : "not assigned" %>
+   </p>
  </h3>
 </div>
