--- a/app/views/shifts/new.html.erb
+++ b/app/views/shifts/new.html.erb
@@ -1,7 +1,6 @@
-<h1>New Shift</h1>
 <%= render "shared/errors", obj: @shift %>
+<h1>New Shift Shift</h1>%>
 <%= render "form", shift: @shift %>
-
 
 <h3>
   <%= link_to "Back to shifts", shifts_path %>
